Pagina-Web_Gary-Goodsped
Students page.

--- a/Papelera/index.html
+++ b/Papelera/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <- Botones Materias ->
     <a href="#" class="btn-neon1">
         <span id="span1"></span>
         <span id="span2"></span>
