Pagina-Web_Gary-Goodsped
Some changes.

--- a/Papelera/admin_home.html
+++ b/Papelera/admin_home.html
@@ -176,3 +176,40 @@
   <script src="main.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="tableRemove-container">
+  <table class="removeTable">
+    <thead>
+      <tr>
+          <td>Nombre</td>
+          <td>Apellido</td>
+          <td>DNI</td>
+          <td>Curso</td>
+          <td>División</td>
+      </tr>
+      <tbody>
+        <tr>
+          
+        </tr>
+      </thead>
+  </table>
+</div>
